Wed Aug 23 11:28:00 BST 2000 Olly Betts

	* omsettings.h: added list of valid backends to doc comment.

Tue Aug 22 19:02:14 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Python bindings partly moved into the present.

Tue Aug 22 18:26:00 BST 2000 Olly Betts

	* apitest now tests query length and within query frequency (wqf).

	* Fixed max_or_terms to preserve the query_size when an OR collapses
	  to just one sub-query.

	* The query length now makes it through to IRWeight (was always
	  passing 1).

	* remote backend currently fails test qlen1 because the query length
	  isn't currently passed in the serialisation of an OmQuery.

Tue Aug 22 18:19:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add class to hold modified blocks in a quartz DB.  Doesn't compile
	  yet, but then, its not linked into the build system either. ;-)

Tue Aug 22 17:00:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added some proof-of-concept XML-generated indexer network code.

Tue Aug 22 16:59:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix documentation comment in omsettings to refer to remote instead
	  of network.

Tue Aug 22 11:40:00 BST 2000 Olly Betts

	* Rearranged the file layout of the OmDatabase* classes to be rather
	  more sane.

Mon Aug 21 17:16:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.3.0

Mon Aug 21 17:13:00 BST 2000 Olly Betts

	* Now use within query frequency and query length information in
	  match.

Mon Aug 21 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add release note to NEWS.

Mon Aug 21 16:18:00 BST 2000 Olly Betts

	* Added a few items to TODO.

Mon Aug 21 15:28:00 BST 2000 Olly Betts

	* WARNING: Incompatible changes to API!

	* om_queryop -> OmQuery::op, OM_MOP_* -> OmQuery::OP_*

Mon Aug 21 15:03:00 BST 2000 Olly Betts

	* Overhauled TODO list and added difficulty column.
